[MSPAINT] Handle settings from registry correctly.  Patch by Carlo Bramini.  CORE-11400

svn path=/trunk/; revision=72158